--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+		
+		<title>Canvas 1945</title>
+		
 		<style>
 			body {
 				margin: 0px;
 				padding: 0px;
+				background: rgb( 4, 6, 10 );
 			}
 			
 			#container {
