--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<script src="js/core/game.js"></script>
 		<script src="js/core/sprite.js"></script>
 		<script src="js/builder/spritesheet.js"></script>
-		<script src="js/builder/player.js"></script>
+		<script src="js/builder/plane.player.js"></script>
 		<script src="js/display/fps.js"></script>
 		<script src="js/run.js"></script>
 	</body>
