Update HTML page to reflect changes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 		<script src="js/core/game.js"></script>
 		<script src="js/core/sprite.js"></script>
 		<script src="js/builder/spritesheet.js"></script>
+		<script src="js/builder/background.island.js"></script>
 		<script src="js/builder/plane.player.js"></script>
+		<script src="js/game/island.js"></script>
 		<script src="js/display/fps.js"></script>
 		<script src="js/run.js"></script>
 	</body>
