Update HTML page to reflect changes

--- a/index.html
+++ b/index.html
@@ -7,17 +7,22 @@
 	<body>
 		<div id="container"></div>
 		<script src="js/easeljs.min.js"></script>
+		<script src="js/lodash.custom.js"></script>
 		<script src="js/pre.js"></script>
 		<script src="js/core/game_container.js"></script>
 		<script src="js/core/game.js"></script>
 		<script src="js/core/sprite.js"></script>
+		<script src="js/core/movable.js"></script>
 		<script src="js/core/level.js"></script>
 		<script src="js/builder/spritesheet.js"></script>
 		<script src="js/builder/background.island.js"></script>
 		<script src="js/builder/plane.player.js"></script>
+		<script src="js/builder/plane.mini.js"></script>
 		<script src="js/game/island.js"></script>
+		<script src="js/game/plane.js"></script>
 		<script src="js/game/player.js"></script>
 		<script src="js/display/fps.js"></script>
+		<script src="js/display/hud.js"></script>
 		<script src="js/run.js"></script>
 	</body>
 </html>
