Update HTML page to reflect changes

--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
 		<script src="js/builder/background.island.js"></script>
 		<script src="js/builder/plane.player.js"></script>
 		<script src="js/builder/plane.mini.js"></script>
+		<script src="js/builder/plane.green.js"></script>
 		<script src="js/game/island.js"></script>
 		<script src="js/game/plane.js"></script>
+		<script src="js/game/plane.enemy.js"></script>
 		<script src="js/game/player.js"></script>
 		<script src="js/display/fps.js"></script>
 		<script src="js/display/hud.js"></script>
