Update HTML page to reflect changes

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<script src="js/core/sprite.js"></script>
 		<script src="js/core/movable.js"></script>
 		<script src="js/core/level.js"></script>
+		<script src="js/core/game_collisionmanager.js"></script>
 		<script src="js/builder/spritesheet.js"></script>
 		<script src="js/builder/background.island.js"></script>
 		<script src="js/builder/plane.player.js"></script>
