Namespace the files

--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@
 		<script src="js/easeljs.min.js"></script>
 		<script src="js/lodash.custom.js"></script>
 		<script src="js/pre.js"></script>
-		<script src="js/core/game_container.js"></script>
-		<script src="js/core/game.js"></script>
-		<script src="js/core/sprite.js"></script>
-		<script src="js/core/movable.js"></script>
-		<script src="js/core/level.js"></script>
-		<script src="js/core/game_collisionmanager.js"></script>
-		<script src="js/core/game_eventmanager.js"></script>
-		<script src="js/builder/spritesheet.js"></script>
-		<script src="js/builder/background.island.js"></script>
-		<script src="js/builder/plane.player.js"></script>
-		<script src="js/builder/plane.mini.js"></script>
-		<script src="js/builder/plane.green.js"></script>
-		<script src="js/game/island.js"></script>
-		<script src="js/game/plane.js"></script>
-		<script src="js/game/plane.enemy.js"></script>
-		<script src="js/game/player.js"></script>
-		<script src="js/display/fps.js"></script>
-		<script src="js/display/hud.js"></script>
+		<script src="js/core/game.container.js"></script>
+		<script src="js/core/game.canvas1945.js"></script>
+		<script src="js/core/game.sprite.js"></script>
+		<script src="js/core/game.movable.js"></script>
+		<script src="js/core/game.level.js"></script>
+		<script src="js/core/game.collisionmanager.js"></script>
+		<script src="js/core/game.eventmanager.js"></script>
+		<script src="js/builder/builder.spritesheet.js"></script>
+		<script src="js/builder/builder.background.island.js"></script>
+		<script src="js/builder/builder.plane.player.js"></script>
+		<script src="js/builder/builder.plane.mini.js"></script>
+		<script src="js/builder/builder.plane.green.js"></script>
+		<script src="js/game/game.island.js"></script>
+		<script src="js/game/game.plane.js"></script>
+		<script src="js/game/game.plane.enemy.js"></script>
+		<script src="js/game/game.player.js"></script>
+		<script src="js/display/display.fps.js"></script>
+		<script src="js/display/display.hud.js"></script>
 		<script src="js/run.js"></script>
 	</body>
 </html>
