Update HTML page to reflect changes

--- a/index.html
+++ b/index.html
@@ -21,10 +21,14 @@
 		<script src="js/builder/builder.plane.player.js"></script>
 		<script src="js/builder/builder.plane.mini.js"></script>
 		<script src="js/builder/builder.plane.green.js"></script>
+		<script src="js/builder/builder.bullet.js"></script>
 		<script src="js/game/game.island.js"></script>
 		<script src="js/game/game.plane.js"></script>
 		<script src="js/game/game.plane.enemy.js"></script>
 		<script src="js/game/game.player.js"></script>
+		<script src="js/game/game.bullet.js"></script>
+		<script src="js/game/game.bullet.player.js"></script>
+		<script src="js/game/game.bullet.enemy.js"></script>
 		<script src="js/display/display.fps.js"></script>
 		<script src="js/display/display.hud.js"></script>
 		<script src="js/run.js"></script>
