--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<body>
 		<div id="container"></div>
 		<script src="js/easeljs.min.js"></script>
+		<script src="js/preloadjs.min.js"></script>
 		<script src="js/lodash.custom.js"></script>
 		<script src="js/pre.js"></script>
 		<script src="js/core/game.container.js"></script>
