Update HTML page to reflect changes

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 		<script src="js/builder/builder.plane.player.js"></script>
 		<script src="js/builder/builder.plane.mini.js"></script>
 		<script src="js/builder/builder.plane.green.js"></script>
+		<script src="js/builder/builder.plane.lime.js"></script>
+		<script src="js/builder/builder.plane.orange.js"></script>
+		<script src="js/builder/builder.plane.blue.js"></script>
+		<script src="js/builder/builder.plane.white.js"></script>
 		<script src="js/builder/builder.bullet.js"></script>
 		<script src="js/game/game.island.js"></script>
 		<script src="js/game/game.plane.js"></script>
