Update HTML to reflect changes

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 		<script src="js/builder/builder.plane.blue.js"></script>
 		<script src="js/builder/builder.plane.white.js"></script>
 		<script src="js/builder/builder.bullet.js"></script>
+		<script src="js/game/game.data.js"></script>
 		<script src="js/game/game.island.js"></script>
 		<script src="js/game/game.plane.js"></script>
 		<script src="js/game/game.plane.enemy.js"></script>
