Update HTML pages to reflect changes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<script src="js/easeljs.min.js"></script>
 		<script src="js/preloadjs.min.js"></script>
 		<script src="js/lodash.custom.js"></script>
+		<script src="js/locache.min.js"></script>
 		<script src="js/pre.js"></script>
 		<script src="js/core/game.container.js"></script>
 		<script src="js/core/game.canvas1945.js"></script>
@@ -17,6 +18,7 @@
 		<script src="js/core/game.level.js"></script>
 		<script src="js/core/game.collisionmanager.js"></script>
 		<script src="js/core/game.eventmanager.js"></script>
+		<script src="js/core/game.assetmanager.js"></script>
 		<script src="js/builder/builder.spritesheet.js"></script>
 		<script src="js/builder/builder.background.island.js"></script>
 		<script src="js/builder/builder.plane.player.js"></script>
