Update HTML pages to reflect changes

--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
 		<script src="js/builder/builder.plane.orange.js"></script>
 		<script src="js/builder/builder.plane.blue.js"></script>
 		<script src="js/builder/builder.plane.white.js"></script>
+		<script src="js/builder/builder.plane.shards.js"></script>
 		<script src="js/builder/builder.bullet.js"></script>
 		<script src="js/game/game.data.js"></script>
 		<script src="js/game/game.island.js"></script>
 		<script src="js/game/game.plane.js"></script>
 		<script src="js/game/game.plane.enemy.js"></script>
+		<script src="js/game/game.shard.js"></script>
 		<script src="js/game/game.player.js"></script>
 		<script src="js/game/game.bullet.js"></script>
 		<script src="js/game/game.bullet.player.js"></script>
