--- a/index.html
+++ b/index.html
@@ -6,19 +6,24 @@
 	</head>
 	<body>
 		<div id="container"></div>
-		<script src="js/easeljs.min.js"></script>
-		<script src="js/preloadjs.min.js"></script>
-		<script src="js/lodash.custom.js"></script>
-		<script src="js/locache.min.js"></script>
+		
+		<script src="lib/easeljs.min.js"></script>
+		<script src="lib/preloadjs.min.js"></script>
+		<script src="lib/lodash.custom.min.js"></script>
+		<script src="lib/locache.min.js"></script>
+		
 		<script src="js/pre.js"></script>
+		
 		<script src="js/core/game.container.js"></script>
 		<script src="js/core/game.canvas1945.js"></script>
 		<script src="js/core/game.sprite.js"></script>
 		<script src="js/core/game.movable.js"></script>
 		<script src="js/core/game.level.js"></script>
+		<script src="js/core/game.menu.js"></script>
 		<script src="js/core/game.collisionmanager.js"></script>
 		<script src="js/core/game.eventmanager.js"></script>
 		<script src="js/core/game.assetmanager.js"></script>
+		
 		<script src="js/builder/builder.spritesheet.js"></script>
 		<script src="js/builder/builder.background.island.js"></script>
 		<script src="js/builder/builder.plane.player.js"></script>
@@ -30,6 +35,7 @@
 		<script src="js/builder/builder.plane.white.js"></script>
 		<script src="js/builder/builder.plane.shards.js"></script>
 		<script src="js/builder/builder.bullet.js"></script>
+		
 		<script src="js/game/game.data.js"></script>
 		<script src="js/game/game.island.js"></script>
 		<script src="js/game/game.plane.js"></script>
@@ -39,8 +45,11 @@
 		<script src="js/game/game.bullet.js"></script>
 		<script src="js/game/game.bullet.player.js"></script>
 		<script src="js/game/game.bullet.enemy.js"></script>
+		
 		<script src="js/display/display.fps.js"></script>
 		<script src="js/display/display.hud.js"></script>
+		<script src="js/display/display.progress.js"></script>
+		
 		<script src="js/run.js"></script>
 	</body>
 </html>
