--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 		<script src="js/builder/builder.spritesheet.js"></script>
 		<script src="js/builder/builder.background.island.js"></script>
 		<script src="js/builder/builder.plane.player.js"></script>
+		<script src="js/builder/builder.plane.enemy.js"></script>
 		<script src="js/builder/builder.plane.mini.js"></script>
 		<script src="js/builder/builder.plane.green.js"></script>
 		<script src="js/builder/builder.plane.lime.js"></script>
@@ -49,6 +50,7 @@
 		<script src="js/display/display.fps.js"></script>
 		<script src="js/display/display.hud.js"></script>
 		<script src="js/display/display.progress.js"></script>
+		<script src="js/display/display.menu.js"></script>
 		
 		<script src="js/run.js"></script>
 	</body>
