--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
 		<script src="js/display/display.progress.js"></script>
 		<script src="js/display/display.menu.js"></script>
 		
+		<script src="js/levels/level.base.js"></script>
+		<script src="js/levels/level.endless.js"></script>
+		<script src="js/levels/level.0.js"></script>
+		
 		<script src="js/run.js"></script>
 	</body>
 </html>
