Add missing files

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 		<script src="js/core/game.collisionmanager.js"></script>
 		<script src="js/core/game.eventmanager.js"></script>
 		<script src="js/core/game.assetmanager.js"></script>
+		<script src="js/core/game.timeline.js"></script>
 		
 		<script src="js/builder/builder.spritesheet.js"></script>
 		<script src="js/builder/builder.background.island.js"></script>
@@ -55,6 +56,7 @@
 		<script src="js/levels/level.base.js"></script>
 		<script src="js/levels/level.endless.js"></script>
 		<script src="js/levels/level.0.js"></script>
+		<script src="js/levels/level.1.js"></script>
 		
 		<script src="js/run.js"></script>
 	</body>
